mobile css done

--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
 </head>
 
 <body>
-  <p>a</p>
-  <p>b</p>
-  <p>c</p>
-  <p>d</p>
-  <p>e</p>
-  <p>f</p>
-  <p>g</p>
-  <p>h</p>
-  <p>i</p>
+  <section>
+    <p id="a">a</p>
+    <p id="b">b</p>
+    <p id="c">c</p>
+    <p id="d">d</p>
+    <p id="e">e</p>
+    <p id="f">f</p>
+    <p id="g">g</p>
+    <p id="h">h</p>
+    <p id="i">i</p>
+  </section>
 </body>
+<footer>
+
+</footer>
 
 </html>
